# vauid

./: Cargo.toml  TODO.md
.cargo/: config.toml
vauid/: Cargo.toml
vauid-shared/: Cargo.toml
vauid-shared/src/: error.rs  lib.rs
vauid/src/: main.rs
vauid/src/core/: mod.rs
vauid/src/core/signal/: mod.rs
