[package]
name = "vauid"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true

axum = { version = "0.8.9", features = ["ws"] }
log = "0.4.30"
tokio = { version = "1.52.3", features = ["full"] }
webrtc = "0.17.1"
tokio-tungstenite = "0.29.0"

vauid-shared = { path = "../vauid-shared" }

